@@ -37,6 +37,7 @@ Change Log:
 - Added 8 new currencies to 2CheckOut payment gateway (AED, ILS, LTL, PHP, RON, RUB, SGD, TRY)
 - Added 2 new currencies to Authorize.net AIM payment gateway (AUD and NZD)
 - Add filter so certain products can be excluded from GA tracking
+- Add setting to turn of downloadable product default 1 per order limit
 
 2.8.9 - 9/22/2013 - Aaron Edwards, Arnold, Marko Miljus
 ----------------------------------------------------------------------
